--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
     <title> Pare programming </title>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <p class="index_title classField"> Парне програмування! </p>
+    <p class="classField index_classField"> <font size="5"> <b> Парне програмування! </b> </font> </р>
 
-    <div class="classField">
-        <p class="index_title"> Під'єднатися до кімнати </p>
+    <div class="classField index_classField">
+        <p class="index_title"> <b> Під'єднатися до кімнати </b> </p>
 
         <p class="index_joinRoomCode"> Код: <input class="inputField" type="text" size="4" maxlength="4"
             id="joinRoomCodeInput"> <br> </p>
@@ -26,8 +27,8 @@
         </div>
     </div>
 
-    <div class="classField">
-        <p class="index_title"> Створити кімнату </p>
+    <div class="classField index_classField">
+        <p class="index_title"> <b> Створити кімнату </b> </p>
 
         <div>
             <span class="index_makeRoomCode"> Код: </span>
@@ -46,7 +47,9 @@
         </div>
     </div>
 
-    <div class="classField">
+    <div class="classField index_classField">
+        <p class="index_title"> <b> Додаткові функції </b> </p>
+
         <div class="index_wakeUp">
             <button class="button" type="button" onclick="WakeUpServers()">
                 Розбудити сервери <br>
