--- a/adminPage.html
+++ b/adminPage.html
@@ -90,7 +90,8 @@
         </ul>
     </div>
 
-    <script src="JSCode/universalJS.js"></script>
+    <script src="JSCode/JSCode_unversalFunctions.js"></script>
+    <script src="JSCode/JSCode_wakeUpServers.js"></script>
     <script src="JSCode/JSCode_adminPage.js"></script>
 </body>
 
