--- a/chooseTasksPage.html
+++ b/chooseTasksPage.html
@@ -33,8 +33,7 @@
 
     </div>
 
-    <script src="JSCode/universalJS.js"></script>
-    <script src="JSCode/CPPCompiler.js"></script>
+    <script src="JSCode/JSCode_unversalFunctions.js"></script>
     <script src="JSCode/JSCode_chooseTasksPage.js"></script>
 </body>
 
