--- a/index.html
+++ b/index.html
@@ -9,91 +9,80 @@
 </head>
 
 <body>
-    <p class="classField index_classField">
-        <font size="5"> <b> Парне програмування! </b> </font>
-        </р>
+    <div>
+        <p class="classField_1 index_classField">
+            <font size="5"> <b> Парне програмування! </b> </font>
+            </р>
 
-    <div class="classField index_classField">
-        <p class="index_title"> <b> Під'єднатися до кімнати </b> </p>
+        <div class="classField_1 index_classField">
+            <p class="index_title"> <b> Під'єднатися до кімнати </b> </p>
 
-        <p class="index_joinRoomCode"> Код: <input class="inputField" type="text" size="4" maxlength="4"
-                id="joinRoomCodeInput"> <br> </p>
+            <p class="index_joinRoomCode"> Код: <input class="inputField" type="text" size="4" maxlength="4"
+                    id="joinRoomCodeInput"> <br> </p>
 
 
-        <p class="index_nickname"> Нікнейм: <input class="inputField" type="text" size="24" maxlength="24"
-                id="nicknameInput"> <br> </p>
+            <p class="index_nickname"> Нікнейм: <input class="inputField" type="text" size="24" maxlength="24"
+                    id="nicknameInput"> <br> </p>
 
-        <button class="button" type="button" onclick="JoinRoom()">
-            Приєднатись до кімнати <br>
-    </div>
-
-    <div class="classField index_classField">
-        <p class="index_title"> <b> Створити кімнату </b> </p>
-
-        <div>
-            <span class="index_makeRoomCode"> Код: </span>
-            <input class="inputField" type="text" size="4" maxlength="4" id="makeRoomCodeInput">
-            <button class="button" type="button" onclick="MakeRandomRoomCode()" style="height: 44px;">
-                <svg
-  width="24"
-  height="24"
-  viewBox="0 0 24 24"
-  fill="none"
-  xmlns="http://www.w3.org/2000/svg"
->
-  <path
-    d="M14.9451 7.05518C14.9451 5.95061 15.8405 5.05518 16.9451 5.05518C18.0496 5.05518 18.9451 5.95061 18.9451 7.05518C18.9451 8.15975 18.0496 9.05518 16.9451 9.05518C15.8405 9.05518 14.9451 8.15975 14.9451 7.05518Z"
-    fill="currentColor"
-  />
-  <path
-    d="M16.9451 14.8921C15.8405 14.8921 14.9451 15.7875 14.9451 16.8921C14.9451 17.9967 15.8405 18.8921 16.9451 18.8921C18.0496 18.8921 18.9451 17.9967 18.9451 16.8921C18.9451 15.7875 18.0496 14.8921 16.9451 14.8921Z"
-    fill="currentColor"
-  />
-  <path
-    d="M5.05518 16.8921C5.05518 15.7875 5.95061 14.8921 7.05518 14.8921C8.15975 14.8921 9.05518 15.7875 9.05518 16.8921C9.05518 17.9967 8.15975 18.8921 7.05518 18.8921C5.95061 18.8921 5.05518 17.9967 5.05518 16.8921Z"
-    fill="currentColor"
-  />
-  <path
-    d="M7.05518 5.05518C5.95061 5.05518 5.05518 5.95061 5.05518 7.05518C5.05518 8.15975 5.95061 9.05518 7.05518 9.05518C8.15975 9.05518 9.05518 8.15975 9.05518 7.05518C9.05518 5.95061 8.15975 5.05518 7.05518 5.05518Z"
-    fill="currentColor"
-  />
-  <path
-    d="M10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12Z"
-    fill="currentColor"
-  />
-  <path
-    fill-rule="evenodd"
-    clip-rule="evenodd"
-    d="M1 4C1 2.34315 2.34315 1 4 1H20C21.6569 1 23 2.34315 23 4V20C23 21.6569 21.6569 23 20 23H4C2.34315 23 1 21.6569 1 20V4ZM4 3H20C20.5523 3 21 3.44772 21 4V20C21 20.5523 20.5523 21 20 21H4C3.44772 21 3 20.5523 3 20V4C3 3.44772 3.44772 3 4 3Z"
-    fill="currentColor"
-  />
-</svg>
+            <button class="button" type="button" onclick="JoinRoom()">
+                Приєднатись до кімнати <br>
         </div>
 
-        <p class="index_countOfPlayers"> Кількість людей: <input class="inputField" type="number" size="16"
-                maxlength="16" id="countOfPlayersInput" max="199" min="2"> <br> </p>
+        <div class="classField_1 index_classField">
+            <p class="index_title"> <b> Створити кімнату </b> </p>
 
-        <button class="button" type="button" onclick="MakeRoom()">
-            Зробити кімнату <br>
+            <div>
+                <span class="index_makeRoomCode"> Код: </span>
+                <input class="inputField" type="text" size="4" maxlength="4" id="makeRoomCodeInput">
+                <button class="button" type="button" onclick="MakeRandomRoomCode()" style="padding: 7px;">
+                    <svg style="margin-bottom: -16.67%;" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M14.9451 7.05518C14.9451 5.95061 15.8405 5.05518 16.9451 5.05518C18.0496 5.05518 18.9451 5.95061 18.9451 7.05518C18.9451 8.15975 18.0496 9.05518 16.9451 9.05518C15.8405 9.05518 14.9451 8.15975 14.9451 7.05518Z"
+                            fill="currentColor" />
+                        <path
+                            d="M16.9451 14.8921C15.8405 14.8921 14.9451 15.7875 14.9451 16.8921C14.9451 17.9967 15.8405 18.8921 16.9451 18.8921C18.0496 18.8921 18.9451 17.9967 18.9451 16.8921C18.9451 15.7875 18.0496 14.8921 16.9451 14.8921Z"
+                            fill="currentColor" />
+                        <path
+                            d="M5.05518 16.8921C5.05518 15.7875 5.95061 14.8921 7.05518 14.8921C8.15975 14.8921 9.05518 15.7875 9.05518 16.8921C9.05518 17.9967 8.15975 18.8921 7.05518 18.8921C5.95061 18.8921 5.05518 17.9967 5.05518 16.8921Z"
+                            fill="currentColor" />
+                        <path
+                            d="M7.05518 5.05518C5.95061 5.05518 5.05518 5.95061 5.05518 7.05518C5.05518 8.15975 5.95061 9.05518 7.05518 9.05518C8.15975 9.05518 9.05518 8.15975 9.05518 7.05518C9.05518 5.95061 8.15975 5.05518 7.05518 5.05518Z"
+                            fill="currentColor" />
+                        <path
+                            d="M10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12Z"
+                            fill="currentColor" />
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M1 4C1 2.34315 2.34315 1 4 1H20C21.6569 1 23 2.34315 23 4V20C23 21.6569 21.6569 23 20 23H4C2.34315 23 1 21.6569 1 20V4ZM4 3H20C20.5523 3 21 3.44772 21 4V20C21 20.5523 20.5523 21 20 21H4C3.44772 21 3 20.5523 3 20V4C3 3.44772 3.44772 3 4 3Z"
+                            fill="currentColor" />
+                    </svg>
+            </div>
 
-    </div>
+            <p class="index_countOfPlayers"> Кількість людей: <input class="inputField" type="number" size="16"
+                    maxlength="16" id="countOfPlayersInput" max="199" min="2"> <br> </p>
 
-    <div class="classField index_classField">
-        <p class="index_title"> <b> Додаткові функції </b> </p>
+            <button class="button" type="button" onclick="MakeRoom()">
+                Зробити кімнату <br>
 
-        <div class="index_wakeUp">
-            <button class="button" type="button" onclick="WakeUpServers()">
-                Розбудити сервери <br>
         </div>
 
-        <div class="index_resetButton">
-            <button class="button" type="button" onclick="ResetData()">
-                Перезапустити <br>
+        <div class="classField_1 index_classField">
+            <p class="index_title"> <b> Додаткові функції </b> </p>
+
+            <div class="index_wakeUp">
+                <button class="button" type="button" onclick="WakeUpServers()">
+                    Розбудити сервери <br>
+            </div>
+
+            <div class="index_resetButton">
+                <button class="button" type="button" onclick="ResetData()">
+                    Перезапустити <br>
+            </div>
         </div>
     </div>
 
-    <script src="JSCode/universalJS.js"></script>
-    <script src="JSCode/CPPCompiler.js"></script>
+    <script src="JSCode/JSCode_unversalFunctions.js"></script>
+    <script src="JSCode/JSCode_wakeUpServers.js"></script>
     <script src="JSCode/JSCode_index.js"></script>
 </body>
 
