--- a/playerPage.html
+++ b/playerPage.html
@@ -25,7 +25,7 @@
             <img src="./Icons/icon_1.png" class="universal_iconImage"> </button>
     </div>
 
-    <script src="JSCode/universalJS.js"></script>
+    <script src="JSCode/JSCode_unversalFunctions.js"></script>
     <script src="JSCode/JSCode_playerPage.js"></script>
 </body>
 
