--- a/programmingPage.html
+++ b/programmingPage.html
@@ -64,9 +64,8 @@
 
     </div>
 
-    <script src="JSCode/CPPEditor.js"></script>
-    <script src="JSCode/universalJS.js"></script>
-    <script src="JSCode/CPPCompiler.js"></script>
+    <script src="JSCode/JSCode_CPPEditor.js"></script>
+    <script src="JSCode/JSCode_unversalFunctions.js"></script>
     <script src="JSCode/JSCode_programmingPage.js"></script>
 </body>
 
