--- a/resultPage.html
+++ b/resultPage.html
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <script src="JSCode/universalJS.js"></script>
+    <script src="JSCode/JSCode_unversalFunctions.js"></script>
     <script src="JSCode/JSCode_resultPage.js"></script>
 </body>
 
