--- a/spectatorPage.html
+++ b/spectatorPage.html
@@ -13,7 +13,8 @@
         <div class="admin_grid_item"> Duck </div> -->
     </div>
 
-    <script src="JSCode/universalJS.js"></script>
+    <script src="JSCode/JSCode_unversalFunctions.js"></script>
+    <script src="JSCode/JSCode_wakeUpServers.js"></script>
     <script src="JSCode/JSCode_spectatorPage.js"></script>
 </body>
 
