Added icons for PopUpWindows

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p class="index_title"> <b> Додаткові функції </b> </p>
 
             <div class="index_wakeUp">
-                <button class="button" type="button" onclick="WakeUpServers()">
+                <button class="button" type="button" onclick="WakeUpServersButton()">
                     Розбудити сервери <br>
             </div>
 
