Fixed admine Page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <canvas id="bg"></canvas>
+
     <p class="classField_1 index_classField" style="background-color: rgba(var(--color_class_1), 0.25);">
         <font size="5"> <b> Парне програмування! </b> </font>
         </р>
