--- a/resultPage.html
+++ b/resultPage.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
-    <title> Knockout </title>
+    <title> Pare programming </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <canvas id="bg"></canvas>
+    
     <div class="result_players">
         <div class="result_playerStats" id="playerStats">
             <span id="playerName"> Name11111111111111111111 (Ти) </span>
