--- a/adminPage.html
+++ b/adminPage.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
-    <title> Knockout </title>
+    <title> Pare programming </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <canvas id="bg"></canvas>
+
     <div class="admin_organizer">
         <div class="classField_1 admin_roomSettings">
             <span> Задач: </span>
@@ -92,7 +94,7 @@
             <span id="setOfTasks" style="margin: 15px;"> ; Сет задач: </span>
         </div>
 
-        <div class="admin_grid" id="playersGrid">
+        <div class="admin_grid hide-scrollbar" id="playersGrid">
             <div class="classField_1 admin_playerIcon">
                 <img src="./Icons/icon_0.png" class="universal_iconImage">
                 <p class="admin_playerIcon_name"> Duck </p>
@@ -104,6 +106,18 @@
             <div class="classField_1 admin_playerIcon">
                 <img src="./Icons/icon_0.png" class="universal_iconImage">
                 <p class="admin_playerIcon_name"> Duck </p>
+            </div>
+            <div class="classField_1 admin_playerIcon">
+                <img src="./Icons/icon_0.png" class="universal_iconImage">
+                <p class="admin_playerIcon_name"> Duck </p>
+            </div>
+            <div class="classField_1 admin_playerIcon">
+                <img src="./Icons/icon_0.png" class="universal_iconImage">
+                <p class="admin_playerIcon_name"> Duck </p>
+            </div>
+            <div class="classField_1 admin_playerIcon">
+                <img src="./Icons/icon_0.png" class="universal_iconImage">
+                <p class="admin_playerIcon_name"> 123456789012345678901234 </p>
             </div>
         </div>
     </div>
