--- a/chooseTasksPage.html
+++ b/chooseTasksPage.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
-    <title> Knockout </title>
+    <title> Pare programming </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <canvas id="bg"></canvas>
 
     <div class="chooseTasks_enemyStats" id="enemyStats">
         <img class="universal_iconImage" id="enemyIcon">
