--- a/playerPage.html
+++ b/playerPage.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
-    <title> Knockout </title>
+    <title> Pare programming </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <canvas id="bg"></canvas>
+    
     <div class="player_chooseImage">
         <button class="player_chooseImageButton" type="button" id="chooseImageButton" onclick="SkinMenu()">
             <br>
