--- a/spectatorPage.html
+++ b/spectatorPage.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
-    <title> Knockout </title>
+    <title> Pare programming </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <canvas id="bg"></canvas>
+    
     <div class="spectator_grid" id="playersGrid">
         <!--
         <div class="admin_grid_item"> Duck </div> -->
