--- a/adminPage.html
+++ b/adminPage.html
@@ -95,7 +95,7 @@
         </div>
 
         <div class="admin_grid hide-scrollbar" id="playersGrid">
-            <div class="classField_1 admin_playerIcon">
+            <!--<div class="classField_1 admin_playerIcon">
                 <img src="./Icons/icon_0.png" class="universal_iconImage">
                 <p class="admin_playerIcon_name"> Duck </p>
             </div>
@@ -118,7 +118,7 @@
             <div class="classField_1 admin_playerIcon">
                 <img src="./Icons/icon_0.png" class="universal_iconImage">
                 <p class="admin_playerIcon_name"> 123456789012345678901234 </p>
-            </div>
+            </div>-->
         </div>
     </div>
 
