Fixed player page

--- a/adminPage.html
+++ b/adminPage.html
@@ -88,16 +88,16 @@
             </div>
         </div>
 
-        <div class="classField_1 admin_roomInfo">
+        <div class="classField_1 admin_player_roomInfo">
             <span id="code" style="margin: 15px;"> Код: </span>
             <span id="grade" style="margin: 15px;"> ; Клас: </span>
             <span id="setOfTasks" style="margin: 15px;"> ; Сет задач: </span>
         </div>
 
-        <div class="admin_grid hide-scrollbar" id="playersGrid">
-            <!--<div class="classField_1 admin_playerIcon">
+        <div class="admin_player_grid hide-scrollbar" id="playersGrid">
+            <!--<div class="classField_1 admin_player_playerIcon">
                 <img src="./Icons/icon_0.png" class="universal_iconImage">
-                <p class="admin_playerIcon_name"> Duck </p>
+                <p class="admin_player_playerIcon_name"> Duck </p>
             </div>
             <div class="classField_1 admin_playerIcon">
                 <img src="./Icons/icon_0.png" class="universal_iconImage">
