--- a/playerPage.html
+++ b/playerPage.html
@@ -9,21 +9,69 @@
 
 <body>
     <canvas id="bg"></canvas>
-    
-    <div class="player_chooseImage">
-        <button class="player_chooseImageButton" type="button" id="chooseImageButton" onclick="SkinMenu()">
-            <br>
+
+    <div class="player_organizer">
+        <div class="admin_player_roomInfo">
+            <div class="">
+                <button class="button" type="button" id="chooseImageButton" onclick="SkinMenu()">
+                    Skins<br>
+            </div>
+        </div>
+
+        <div class="admin_player_grid" id="playersGrid">
+            <div class="classField_1 admin_player_playerIcon">
+                <img src="./Icons/icon_0.png" class="universal_iconImage">
+                <p class="admin_player_playerIcon_name"> Duck </p>
+            </div>
+            <div class="classField_1 admin_player_playerIcon">
+                <img src="./Icons/icon_0.png" class="universal_iconImage">
+                <p class="admin_player_playerIcon_name"> 123456789012345678901234 </p>
+            </div>
+            <div class="classField_1 admin_player_playerIcon">
+                <img src="./Icons/icon_0.png" class="universal_iconImage">
+                <p class="admin_player_playerIcon_name"> Duck </p>
+            </div>
+            <div class="classField_1 admin_player_playerIcon">
+                <img src="./Icons/icon_0.png" class="universal_iconImage">
+                <p class="admin_player_playerIcon_name"> 123456789012345678901234 </p>
+            </div>
+            <div class="classField_1 admin_player_playerIcon">
+                <img src="./Icons/icon_0.png" class="universal_iconImage">
+                <p class="admin_player_playerIcon_name"> Duck </p>
+            </div>
+            <div class="classField_1 admin_player_playerIcon">
+                <img src="./Icons/icon_0.png" class="universal_iconImage">
+                <p class="admin_player_playerIcon_name"> 123456789012345678901234 </p>
+            </div>
+            <div class="classField_1 admin_player_playerIcon">
+                <img src="./Icons/icon_0.png" class="universal_iconImage">
+                <p class="admin_player_playerIcon_name"> Duck </p>
+            </div>
+            <div class="classField_1 admin_player_playerIcon">
+                <img src="./Icons/icon_0.png" class="universal_iconImage">
+                <p class="admin_player_playerIcon_name"> 123456789012345678901234 </p>
+            </div>
+        </div>
     </div>
 
-    <div class="player_grid" id="playersGrid">
-        <!--
-        <div class="admin_grid_item"> Duck </div> -->
-    </div>
-
-    <div class="player_chooseImageGrid" id="chooseImageGrid">
-        <button class="player_chooseImageButton_item" type="button" onclick="ChooseSkin(0)">
+    <div class="player_changeSkin" id="chooseImageGrid">
+        <button class="button" type="button" onclick="ChooseSkin(0)">
             <img src="./Icons/icon_0.png" class="universal_iconImage"> </button>
-        <button class="player_chooseImageButton_item" type="button" onclick="ChooseSkin(1)">
+        <button class="button" type="button" onclick="ChooseSkin(1)">
+            <img src="./Icons/icon_1.png" class="universal_iconImage"> </button>
+        <button class="button" type="button" onclick="ChooseSkin(0)">
+            <img src="./Icons/icon_0.png" class="universal_iconImage"> </button>
+        <button class="button" type="button" onclick="ChooseSkin(1)">
+            <img src="./Icons/icon_1.png" class="universal_iconImage"> </button>
+        <button class="button" type="button" onclick="ChooseSkin(0)">
+            <img src="./Icons/icon_0.png" class="universal_iconImage"> </button>
+        <button class="button" type="button" onclick="ChooseSkin(1)">
+            <img src="./Icons/icon_1.png" class="universal_iconImage"> </button>
+        <button class="button" type="button" onclick="ChooseSkin(0)">
+            <img src="./Icons/icon_0.png" class="universal_iconImage"> </button>
+        <button class="button" type="button" onclick="ChooseSkin(1)">
+            <img src="./Icons/icon_1.png" class="universal_iconImage"> </button>
+        <button class="button" type="button" onclick="ChooseSkin(1)">
             <img src="./Icons/icon_1.png" class="universal_iconImage"> </button>
     </div>
 
