--- a/playerPage.html
+++ b/playerPage.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="admin_player_grid" id="playersGrid">
-            <div class="classField_1 admin_player_playerIcon">
+            <!--<div class="classField_1 admin_player_playerIcon">
                 <img src="./Icons/icon_0.png" class="universal_iconImage">
                 <p class="admin_player_playerIcon_name"> Duck </p>
             </div>
@@ -50,7 +50,7 @@
             <div class="classField_1 admin_player_playerIcon">
                 <img src="./Icons/icon_0.png" class="universal_iconImage">
                 <p class="admin_player_playerIcon_name"> 123456789012345678901234 </p>
-            </div>
+            </div>-->
         </div>
     </div>
 
