Fixed all page (font) and spectator page

--- a/chooseTasksPage.html
+++ b/chooseTasksPage.html
@@ -4,6 +4,7 @@
 <head>
     <title> Pare programming </title>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
