--- a/adminPage.html
+++ b/adminPage.html
@@ -4,6 +4,7 @@
 <head>
     <title> Pare programming </title>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -83,7 +84,8 @@
             <br>
 
             <div>
-                <button class="button" type="button" onclick="StartGame()" style="position:absolute; bottom:10px; width: 80%; left:8.5%;">
+                <button class="button" type="button" onclick="StartGame()"
+                    style="position:absolute; bottom:10px; width: 80%; left:8.5%;">
                     Почати гру <br>
             </div>
         </div>
