--- a/programmingPage.html
+++ b/programmingPage.html
@@ -12,8 +12,7 @@
     <canvas id="bg"></canvas>
     
     <div class="programming_wrapper">
-
-        <div class="programming_topBar">
+        <div class="classField_1 programming_topBar">
             <div class="programming_playerStats" id="playerStats">
                 <span id="playerName"> Name11111111111111111111 (Ти) </span>
                 <img class="universal_iconImage" id="playerIcon">
@@ -29,7 +28,7 @@
             </div>
         </div>
 
-        <div class="programming_tasksButtons" id="tasksButtons">
+        <div class="classField_1 programming_tasksButtons" id="tasksButtons">
             
         </div>
 
