Refactor programming page classes and update styles
Replaced several class names in programmingPage.html with more generic classField_1 and classField_2 for improved styling flexibility. Updated styles.css to enhance scrollbar appearance, adjust paddings, and remove hardcoded background and color properties from programming section elements for a cleaner, more consistent look.

--- a/programmingPage.html
+++ b/programmingPage.html
@@ -32,9 +32,9 @@
             
         </div>
 
-        <div class="programming_tasksField" id="tasksField">
+        <div class="classField_1 color-scrollbar programming_tasksField" id="tasksField">
             <p> <font size="4">Задача А</font> <br> <font size="6"><b>Назва задачі</b></font> </p>
-            <p class="programming_limits"> <font size="4"> <em>Ліміт часу 1 секунда</em></font> </p>
+            <p class="classField_2 programming_limits"> <font size="4"> <em>Ліміт часу 1 секунда</em></font> </p>
             <p>Умова задачі</p>
             <p><font size="5"><b>Вхідні файли</b></font></p>
             <p>...</p>
@@ -44,24 +44,24 @@
 
             <p><font size="4"><b>Приклад №1</b></font></p>
             <span><b>Ввід:</b></span>
-            <p class="programming_examples">10</p> 
+            <p class="classField_2 programming_examples">10</p> 
             <span><b>Вивід:</b></span>
-            <p class="programming_examples">11</p>
+            <p class="classField_2 programming_examples">11</p>
 
             <p><font size="4"><b>Приклад №2</b></font></p>
             <span><b>Ввід:</b></span>
-            <p class="programming_examples">31 </p> 
+            <p class="classField_2 programming_examples">31 </p> 
             <span><b>Вивід:</b></span>
-            <p class="programming_examples">32</p>
+            <p class="classField_2 programming_examples">32</p>
         </div>
 
-        <div class="programming_result" id="resultField">
+        <div class="classField_1 programming_result" id="resultField">
             50/100
         </div>
 
-        <div class="programming_editorField" id="editorField">
-            <button class="programming_submitButton" onclick="UploadSolution()"> Відправити розв'язок </button>
-            <div class="programming_editor" id="editor" contenteditable="true" spellcheck="false"></div>
+        <div class="classField_1 programming_editorField" id="editorField">
+            <button class="button programming_submitButton" onclick="UploadSolution()"> Відправити розв'язок </button>
+            <div class="classField_2 programming_editor" id="editor" contenteditable="true" spellcheck="false"></div>
         </div>
 
     </div>
