Fixing page style

--- a/spectatorPage.html
+++ b/spectatorPage.html
@@ -12,8 +12,8 @@
     <canvas id="bg"></canvas>
 
     <div class="spectator_organizer">
-        <div>
-            Time: 19:30
+        <div class="spectator_time">
+            <font size="5"> <b> Time: 19:30 </b> </font>
         </div>
 
         <div class="spectator_grid" id="playersGrid">
