--- a/spectatorPage.html
+++ b/spectatorPage.html
@@ -15,8 +15,9 @@
         <div class="spectator_time">
             <font size="5"> <b> Time: 19:30 </b> </font>
         </div>
-
+        
         <div class="spectator_grid" id="playersGrid">
+            <!--
             <div class="classField_1 spectator_playerIcon">
                 <div class="spectator_playerIcon_info">
                     <img src="./Icons/icon_0.png" class="universal_iconImage">
@@ -56,7 +57,7 @@
                 <div class="spectator_progressCircle" style="--percentage: 180deg; --progress-color: #4caf50">
                     <div class="spectator_progressCircle_text"> 100/<br>800 </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 
